1. itext/src/main/java/*.* format all files using Intellij Idea;